@@ -1,3 +1,4 @@
 DIST acts-as-taggable-on-2.4.1.gem 34816 SHA256 4b75dd427cb721f38fe354e8a37d8c3d217779c9db204398890984694def753d SHA512 7c35d3c8f723870e39d184b8c9877ee735adbda4b1c6d3bd2547e4351a338f515da157ec8ffd0c896894e7c35533295e617dd73f95bb75850689f31a9f3d4fcf WHIRLPOOL f205b73964b16427c4ade9d32f04f6facb3c6914bced7633e353b056380168cb64b1b6ba2758c9221d3b8c0fc6b530ccc9be044f2215f466a5e13d51ecb5a170
 DIST acts-as-taggable-on-3.0.1.gem 37888 SHA256 849d7341395783e3ac86ba6a8f588853050cbedfe48a664ed2daece46f86cd0e SHA512 df7eae0bb1fbd11378269c15443e1eabcd30bdbbb3c4fcd9e9d87c593950a796de283a7e4abbbb48fac0e164a5620dd9ff37ed8a179bd065e3ddf6938630456d WHIRLPOOL e4e0823db816d43dc8dd0e8c1e9af5b71c41af4ad906c1f50f552f1c3e20a7dcba69ce21220c5e8d34bdea8645e8cd5db548f701c377895c5dd35cb287c675bb
 DIST acts-as-taggable-on-3.0.2.gem 37888 SHA256 521e4c438e00fb9eb15caf36233bd203bbc4876d54d4f9343bb7205619ac55fe SHA512 6ec3ec88658463233de1e15579d5f9a586517b96a6d2f8c6768769262537fbbeaccca6ddadc7a21198f45adb1e350bd423c2f3c2e406521777ebe3f703d36481 WHIRLPOOL b912cbb5a3f2c640e4dd351c1a683717b1bd75809c502b41fa577702c0dabbcbba2cf1cfe0f42387a14e209e847b216df795b44a6c2612f5089af817db816914
+DIST acts-as-taggable-on-3.1.0.gem 39936 SHA256 7253f063086ab501b6f9ab19ec638029e9aa988263da9582331af777762d97a9 SHA512 f6dae40f8767e2ab4de7a01343800eed0315bd0543277743ae547c9019f51c4221f469ed17eacaf97863245daab4076e32154562f3e9f4231176adfdbe3ccce5 WHIRLPOOL 171efd021216106157c3e2fd75c0aeaf9280eb71367c8ec1f1904145fc0f2ac3ac740fa70c592e9c437d6c0b285cf56896d37a8604363f211c976084e9b62202
