@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*acts-as-taggable-on-3.1.0 (04 Apr 2014)
+
+  04 Apr 2014; Hans de Graaff <graaff@gentoo.org>
+  +acts-as-taggable-on-3.1.0.ebuild:
+  Version bump.
+
 *acts-as-taggable-on-3.0.2 (27 Mar 2014)
 
   27 Mar 2014; Hans de Graaff <graaff@gentoo.org>
